--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 #これがないとcheckoutの利用時にエラーが出る。
 
       - name: Generate new tag
         id: new_tag
