--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -25,3 +25,10 @@ jobs:
         id: set_release_tag
         run: |
           echo "${{ steps.cur_tag_var.outputs.cur_tag }}"
+          # タグが存在しない場合、初期リリースとしてv1.0.0.0をセット
+          if [[ "${{ steps.cur_tag_var.outputs.cur_tags }}" == '' ]]; thens
+            NEW_TAG="v1.0.0.0"
+            echo "Initial release: $NEW_TAG"
+            echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+            exit 0
+          fi
