インクリメントするコードを追加

--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -30,7 +30,7 @@ jobs:
             NEW_TAG="v1.0.0.0"
             echo "Initial release: $NEW_TAG"
             echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-            exit 0
+            # exit 0
           fi
 
           echo "コール"
