--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -24,16 +24,14 @@ jobs:
       - name: リリースタグを設定
         id: set_release_tag
         run: |
-          echo "${{ steps.cur_tag_var.outputs.cur_tag }}"
           # タグが存在しない場合、初期リリースとしてv1.0.0.0をセット
           if [[ "${{ steps.cur_tag_var.outputs.cur_tags }}" == '' ]]; then
             NEW_TAG="v1.0.0.0"
             echo "Initial release: $NEW_TAG"
             echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-            # exit 0
+            exit 0
           fi
 
-          echo "コール"
           # タグからバージョン部分を取得して分割
           IFS='.' read -ra VERSION <<< "${NEW_TAG#v}"
 
