不要な箇所を削除

--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -24,12 +24,13 @@ jobs:
       - name: リリースタグを設定
         id: set_release_tag
         run: |
+          echo "${{ steps.cur_tag_var.outputs.cur_tags }}"
           # タグが存在しない場合、初期リリースとしてv1.0.0.0をセット
           if [[ "${{ steps.cur_tag_var.outputs.cur_tags }}" == '' ]]; then
             NEW_TAG="v1.0.0.0"
             echo "Initial release: $NEW_TAG"
             echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-            exit 0
+            exit 1
           fi
 
           # タグからバージョン部分を取得して分割
