--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           git fetch --prune --unshallow
           echo "$(git tag --sort=creatordate | tail -n 1)" > CUR_TAG
-          echo ::set-output name=cur_tag::$(cat CUR_TAG)
+          echo ::set-output name=cur_tag::$CUR_TAG
 
       - name: リリースタグを設定
         id: set_release_tag
@@ -66,8 +66,7 @@ jobs:
       - name: リリースタグをgitにpush
         id: set_git_tag
         run: |
-          echo "${{ steps.set_release_tag.outputs.new_tag }}" 
-          # cat TARGET_TAG_NAME
-          # git tag $(cat TARGET_TAG_NAME)
-          # git push origin $(cat TARGET_TAG_NAME)
-          # echo ::set-output name=target_tag_name::$(cat TARGET_TAG_NAME)
+          echo "${{ steps.set_release_tag.outputs.new_tag }}" > TARGET_TAG_NAME
+          cat TARGET_TAG_NAME
+          git tag $(cat TARGET_TAG_NAME)
+          git push origin $(cat TARGET_TAG_NAME)
