シークレットを追加

--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/ryota-09/cicd-sample.git
+          git remote set-url origin https://x-access-token:${{ secrets.FOR_TAG_GITHUB_TOKEN }}@github.com/ryota-09/cicd-sample.git
 
       - name: リリースタグをgitにpush
         id: set_git_tag
