--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -24,7 +24,7 @@ jobs:
       - name: リリースタグを設定
         id: set_release_tag
         run: |
-          echo "${{ steps.cur_tag_var.outputs.cur_tag }}"
+          echo "@@@@@${{ steps.cur_tag_var.outputs.cur_tag }}"
           # タグが存在しない場合、初期リリースとしてv1.0.0.0をセット
           if [[ "${{ steps.cur_tag_var.outputs.cur_tag }}" == '' ]]; then
             NEW_TAG="v1.0.0.0"
