--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -24,7 +24,6 @@ jobs:
       - name: リリースタグを設定
         id: set_release_tag
         run: |
-          echo "@@@@@${{ steps.cur_tag_var.outputs.cur_tag }}"
           # タグが存在しない場合、初期リリースとしてv1.0.0.0をセット
           if [[ "${{ steps.cur_tag_var.outputs.cur_tag }}" == '' ]]; then
             NEW_TAG="v1.0.0.0"
@@ -63,9 +62,13 @@ jobs:
           echo "New tag: $NEW_TAG"
           echo ::set-output name=new_tag::$NEW_TAG
 
-      - name: 権限を付与とタグの設定
+      - name: タグの設定
         run: |
           TARGET_TAG_NAME="${{ steps.set_release_tag.outputs.new_tag }}"
-          echo TARGET_TAG_NAME
-          git tag $TARGET_TAG_NAME
+          # タイムゾーンをJSTに設定して、現在の日付を取得
+          CURRENT_DATE=$(TZ="Asia/Tokyo" date +"%Y年%m月%d日")
+          DESCRIPTION="${CURRENT_DATE}公開"
+
+          # タグを作成してディスクリプションを付与
+          git tag -a $TARGET_TAG_NAME main -m "$DESCRIPTION"
           git push origin $TARGET_TAG_NAME
