--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -61,14 +61,21 @@ jobs:
           NEW_TAG="v$MAJOR.$MINOR.$PATCH1.$PATCH2"
           echo "New tag: $NEW_TAG"
           echo ::set-output name=new_tag::$NEW_TAG
-
-      - name: タグの設定
+          
+      - name: 権限を付与とタグの設定
         run: |
           TARGET_TAG_NAME="${{ steps.set_release_tag.outputs.new_tag }}"
-          # タイムゾーンをJSTに設定して、現在の日付を取得
-          CURRENT_DATE=$(TZ="Asia/Tokyo" date +"%Y年%m月%d日")
-          DESCRIPTION="${CURRENT_DATE}公開"
-          echo $DESCRIPTION
-          # タグを作成してディスクリプションを付与
-          git tag -a $TARGET_TAG_NAME -m "$DESCRIPTION"
+          echo TARGET_TAG_NAME
+          git tag $TARGET_TAG_NAME
           git push origin $TARGET_TAG_NAME
+
+      # - name: タグの設定
+      #   run: |
+      #     TARGET_TAG_NAME="${{ steps.set_release_tag.outputs.new_tag }}"
+      #     # タイムゾーンをJSTに設定して、現在の日付を取得
+      #     CURRENT_DATE=$(TZ="Asia/Tokyo" date +"%Y年%m月%d日")
+      #     DESCRIPTION="${CURRENT_DATE}公開"
+      #     echo $DESCRIPTION
+      #     # タグを作成してディスクリプションを付与
+      #     git tag -a $TARGET_TAG_NAME -m "$DESCRIPTION"
+      #     git push origin $TARGET_TAG_NAME
