--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -61,20 +61,27 @@ jobs:
           NEW_TAG="v$MAJOR.$MINOR.$PATCH1.$PATCH2"
           echo "New tag: $NEW_TAG"
           echo ::set-output name=new_tag::$NEW_TAG
-          
+
       - name: Set Git Committer Info
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
       - name: 権限を付与とタグの設定
+        id: set_body
         run: |
           TARGET_TAG_NAME="${{ steps.set_release_tag.outputs.new_tag }}"
           CURRENT_DATE=$(TZ="Asia/Tokyo" date +"%Y年%m月%d日")
-          echo TARGET_TAG_NAME
-          echo $DESCRIPTION
-          git tag $TARGET_TAG_NAME -m "$DESCRIPTION"
-          git push origin $TARGET_TAG_NAME
+          BODY="${CURRENT_DATE}公開"
+          echo $BODY
+          echo ::set-output name=body::$BODY
+
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.set_release_tag.outputs.new_tag }}
+          name: ${{ steps.set_release_tag.outputs.new_tag }}
+          body: ${{ steps.set_body.outputs.body }}
 
       # - name: タグの設定
       #   run: |
