--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -62,10 +62,10 @@ jobs:
           echo "New tag: $NEW_TAG"
           echo ::set-output name=new_tag::$NEW_TAG
 
-      - name: Set Git Committer Info
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+      # - name: Set Git Committer Info
+      #   run: |
+      #     git config user.name "GitHub Actions"
+      #     git config user.email "actions@github.com"
 
       - name: 権限を付与とタグの設定
         id: set_body
@@ -73,7 +73,6 @@ jobs:
           TARGET_TAG_NAME="${{ steps.set_release_tag.outputs.new_tag }}"
           CURRENT_DATE=$(TZ="Asia/Tokyo" date +"%Y年%m月%d日")
           BODY="${CURRENT_DATE}公開"
-          echo $BODY
           echo ::set-output name=body::$BODY
 
       - name: Create a GitHub release
@@ -82,14 +81,3 @@ jobs:
           tag: ${{ steps.set_release_tag.outputs.new_tag }}
           name: ${{ steps.set_release_tag.outputs.new_tag }}
           body: ${{ steps.set_body.outputs.body }}
-
-      # - name: タグの設定
-      #   run: |
-      #     TARGET_TAG_NAME="${{ steps.set_release_tag.outputs.new_tag }}"
-      #     # タイムゾーンをJSTに設定して、現在の日付を取得
-      #     CURRENT_DATE=$(TZ="Asia/Tokyo" date +"%Y年%m月%d日")
-      #     DESCRIPTION="${CURRENT_DATE}公開"
-      #     echo $DESCRIPTION
-      #     # タグを作成してディスクリプションを付与
-      #     git tag -a $TARGET_TAG_NAME -m "$DESCRIPTION"
-      #     git push origin $TARGET_TAG_NAME
