--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -57,8 +57,8 @@ jobs:
               fi
             fi
           fi
-          
-          # 新しいタグを生成
+
+          # 新しいタグのセット
           NEW_TAG="v$MAJOR.$MINOR.$PATCH1.$PATCH2"
           echo "New tag: $NEW_TAG"
           echo ::set-output name=new_tag::$NEW_TAG
