--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -28,7 +28,7 @@ jobs:
           if [[ "${{ steps.cur_tag_var.outputs.cur_tag }}" == '' ]]; then
             NEW_TAG="v1.0.0.0"
             echo "Initial release: $NEW_TAG"
-            echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+            echo ::set-output name=new_tag::$NEW_TAG
             exit 0
           fi
 
